name:                hetero-map
description:         Pure heterogeneous maps.  
synopsis:            Pure heterogeneous maps.
version:             0.21.0
stability:           experimental
license:             BSD3
license-file:        LICENSE
homepage:            https://github.com/luqui/hetero-map#README.md
author:              Luke Palmer
maintainer:          lrpalmer@gmail.com
copyright:           2017 Luke Palmer
category:            Data, Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.HeteroMap.Map
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.0.0 && < 0.6
                     , ghc-prim >= 0.5.0.0 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/luqui/hetero-map
